<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">
    <TextView android:id="@+id/tvCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblMail"/>
    <EditText android:id="@+id/edCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <TextView android:id="@+id/tvCuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblCuit"/>
    <EditText android:id="@+id/edtCuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <TextView android:id="@+id/tvMoneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblMoneda"/>
    <RadioGroup android:id="@+id/optMoneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/optPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblMonedaPeso">
        </RadioButton>
        <RadioButton android:id="@+id/optDolar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblMonedaDolar">
        </RadioButton>
    </RadioGroup>

    <TextView android:id="@+id/tvMonto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblMonto"/>
    <EditText android:id="@+id/edtMonto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <TextView android:id="@+id/tvDias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblDias"/>
    <SeekBar android:id="@+id/seekDias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/tvDiasSeleccionados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView android:id="@+id/tvIntereses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/tvAvisarVencimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAviso"/>
        <Switch android:id="@+id/swAvisarVencimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ToggleButton android:id="@+id/togAccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/lblAccionVencimientoRenovar"
        android:textOff="@string/lblAccionVencimientoAcreditar"/>

    <CheckBox android:id="@+id/chkTerminos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblTerminos"/>

    <Button android:id="@+id/btnHacerPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnHacer"/>

    <TextView android:id="@+id/edtMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxLines="6"/>

</LinearLayout>